<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ahmedbadr.sala7li.presentation.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ahmedbadr.sala7li.presentation.fragments.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.ahmedbadr.sala7li.presentation.fragments.orders.OrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_orders" />
  </navigation>