<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragments.worker.WorkerFragment">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/topAppBarSearch"
                style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppSearchToolbar"
                    style="@style/Widget.MaterialComponents.Toolbar.Surface"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/circularRevealCardView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topAppBarSearch"
                app:strokeColor="@color/primary"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/imageViewWorkerProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:contentDescription="@string/user_profile_image"
                    android:src="@drawable/man_avatar" />

            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <TextView
                android:id="@+id/textViewWorkerName"
                style="@style/TextAppearance.M3.Sys.Typescale.TitleMedium.MediumTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:text="@string/dummy_ahmed_badr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circularRevealCardView"
                app:layout_constraintTop_toTopOf="@+id/circularRevealCardView" />


            <TextView
                android:id="@+id/textViewLocation"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewLocationIcon"
                app:layout_constraintEnd_toEndOf="@+id/textViewWorkerName"
                app:layout_constraintStart_toEndOf="@+id/imageViewLocationIcon"
                app:layout_constraintTop_toTopOf="@+id/imageViewLocationIcon" />


            <ImageView
                android:id="@+id/imageViewLocationIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/location_icon"
                android:src="@drawable/map_point_outlined"
                app:layout_constraintStart_toStartOf="@+id/circularRevealCardView"
                app:layout_constraintTop_toBottomOf="@+id/buttonOrderNow" />

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/cardViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/yellow_with_opacity"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardViewYearsOfExperience"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocation">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:id="@+id/imageViewWorkerRating"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/worker_rating"
                        android:src="@drawable/star_outlined" />

                    <TextView
                        android:id="@+id/textViewWorkerRating"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dummy_rating_3_5_500" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/cardViewYearsOfExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/red_with_opacity"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/cardViewRating"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardViewCraft"
                app:layout_constraintTop_toTopOf="@+id/cardViewRating">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:id="@+id/imageViewYearsOfExperience"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/worker_rating"
                        android:src="@drawable/medal_ribbon_outlined" />

                    <TextView
                        android:id="@+id/textViewYearsOfExperience"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dummy_10" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/cardViewCraft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/purple_with_opacity"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"

                app:layout_constraintEnd_toStartOf="@+id/cardViewYearsOfExperience"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardViewYearsOfExperience">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="80dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:id="@+id/imageViewCraft"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/worker_rating"
                        android:src="@drawable/hammer_outlined" />

                    <TextView
                        android:id="@+id/textViewCraft"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dummy_plumber" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <TextView
                android:id="@+id/textViewReviews"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/reviews"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewRating" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/reviews_card_background_shape"
                android:clipToPadding="false"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReviews"
                tools:listitem="@layout/review_item" />

            <Button
                android:id="@+id/buttonOrderNow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/success"
                android:text="@string/order"
                app:layout_constraintEnd_toEndOf="@+id/textViewWorkerName"
                app:layout_constraintStart_toStartOf="@+id/textViewWorkerName"
                app:layout_constraintTop_toBottomOf="@+id/textViewWorkerName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>